create case study page

--- a/case-study.html
+++ b/case-study.html
@@ -15,6 +15,7 @@
       <link rel="stylesheet" href="assets/owlcarousel/assets/owl.theme.default.min.css">
       <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
       <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/style.css'>
+      <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/tabs.css'>
       <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/pages.css'>
       <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/global.css'>
    </head>
@@ -84,6 +85,231 @@
                </div>
             </div>
         </section>
+        
+        <!-- tabs section start -->
+
+        <section class="case-tabs-sec mt-50">
+         <div id="other-pages" class="pages text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="section-header">
+                            <h2>Project</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="isotope-nav">
+                            <ul>
+                                <li class="nav-item active" data-filter="*">All</li>
+                                <li class="nav-item" data-filter=".logos">Logos</li>
+                                <li class="nav-item" data-filter=".mockup">Mockup</li>
+                                <li class="nav-item" data-filter=".app-ui">App UI</li>
+                            </ul>
+                        </div>
+                        <div class="isotope-content">
+                            <div class="isotope-item" style="position: relative; height: 2972.5px;">
+                                <div class="row">
+                                    <div class="item col-md-3 col-sm-6 col-xs-12 logos" style="position: absolute; left: 0px; top: 0px;">
+                                        <div class="page-preview">
+                                            <div class="thumb">
+                                                <img src="https://cdn.vox-cdn.com/thumbor/Guer0rnI00zMV8vaCg_JOCB7vTY=/0x0:1190x793/1200x800/filters:focal(500x302:690x492)/cdn.vox-cdn.com/uploads/chorus_image/image/60671473/firefox_logos.0.jpg" class="img-responsive" alt="">
+                                                <div class="overlay">
+                                                    <a href="#" >View Page</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item col-md-3 col-sm-6 col-xs-12 logos" style="position: absolute; left: 285px; top: 0px;">
+                                        <div class="page-preview">
+                                            <div class="thumb">
+                                                <img src="https://cdn.vox-cdn.com/thumbor/Guer0rnI00zMV8vaCg_JOCB7vTY=/0x0:1190x793/1200x800/filters:focal(500x302:690x492)/cdn.vox-cdn.com/uploads/chorus_image/image/60671473/firefox_logos.0.jpg" class="img-responsive" alt="">
+                                                <div class="overlay">
+                                                    <a href="#" >View Page</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item col-md-3 col-sm-6 col-xs-12 logos" style="position: absolute; left: 570px; top: 0px;">
+                                        <div class="page-preview">
+                                            <div class="thumb">
+                                                <img src="https://cdn.vox-cdn.com/thumbor/Guer0rnI00zMV8vaCg_JOCB7vTY=/0x0:1190x793/1200x800/filters:focal(500x302:690x492)/cdn.vox-cdn.com/uploads/chorus_image/image/60671473/firefox_logos.0.jpg" class="img-responsive" alt="">
+                                                <div class="overlay">
+                                                    <a href="#" >View Page</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item col-md-3 col-sm-6 col-xs-12 mockup" style="position: absolute; left: 855px; top: 0px;">
+                                        <div class="page-preview">
+                                            <div class="thumb">
+                                                <img src="https://img.freepik.com/free-psd/set-digital-devices-screen-mockup_53876-76505.jpg?size=626&ext=jpg" class="img-responsive" alt="">
+                                                <div class="overlay">
+                                                    <a href="#" >View Page</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item col-md-3 col-sm-6 col-xs-12 mockup" style="position: absolute; left: 0px; top: 297px;">
+                                        <div class="page-preview">
+                                            <div class="thumb">
+                                                <img src="https://img.freepik.com/free-psd/set-digital-devices-screen-mockup_53876-76505.jpg?size=626&ext=jpg" class="img-responsive" alt="">
+                                                <div class="overlay">
+                                                    <a href="#" >View Page</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item col-md-3 col-sm-6 col-xs-12 app-ui" style="position: absolute; left: 855px; top: 297px;">
+                                        <div class="page-preview">
+                                            <div class="thumb">
+                                                <img src="https://cdn.dribbble.com/users/1789926/screenshots/4318372/cover_2.png" class="img-responsive" alt="">
+                                                <div class="overlay">
+                                                    <a href="#" >View Page</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item col-md-3 col-sm-6 col-xs-12 app-ui" style="position: absolute; left: 0px; top: 594px;">
+                                        <div class="page-preview">
+                                            <div class="thumb">
+                                                <img src="https://cdn.dribbble.com/users/1789926/screenshots/4318372/cover_2.png" class="img-responsive" alt="">
+                                                <div class="overlay">
+                                                    <a href="#" >View Page</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item col-md-3 col-sm-6 col-xs-12 app-ui" style="position: absolute; left: 285px; top: 594px;">
+                                        <div class="page-preview">
+                                            <div class="thumb">
+                                                <img src="https://cdn.dribbble.com/users/1789926/screenshots/4318372/cover_2.png" class="img-responsive" alt="">
+                                                <div class="overlay">
+                                                    <a href="#" >View Page</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item col-md-3 col-sm-6 col-xs-12 app-ui" style="position: absolute; left: 570px; top: 594px;">
+                                        <div class="page-preview">
+                                            <div class="thumb">
+                                                <img src="https://cdn.dribbble.com/users/1789926/screenshots/4318372/cover_2.png" class="img-responsive" alt="">
+                                                <div class="overlay">
+                                                    <a href="#" >View Page</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item col-md-3 col-sm-6 col-xs-12 app-ui" style="position: absolute; left: 855px; top: 594px;">
+                                        <div class="page-preview">
+                                            <div class="thumb">
+                                                <img src="https://cdn.dribbble.com/users/1789926/screenshots/4318372/cover_2.png" class="img-responsive" alt="">
+                                                <div class="overlay">
+                                                    <a href="#" >View Page</a>
+                                                </div>
+                                            </div>
+                                            </h3>
+                                        </div>
+                                    </div>
+                                    <div class="item col-md-3 col-sm-6 col-xs-12 app-ui" style="position: absolute; left: 0px; top: 891px;">
+                                        <div class="page-preview">
+                                            <div class="thumb">
+                                                <img src="https://cdn.dribbble.com/users/1789926/screenshots/4318372/cover_2.png" class="img-responsive" alt="">
+                                                <div class="overlay">
+                                                    <a href="#" >View Page</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item col-md-3 col-sm-6 col-xs-12 app-ui" style="position: absolute; left: 285px; top: 891px;">
+                                        <div class="page-preview">
+                                            <div class="thumb">
+                                                <img src="https://cdn.dribbble.com/users/1789926/screenshots/4318372/cover_2.png" class="img-responsive" alt="">
+                                                <div class="overlay">
+                                                    <a href="#" >View Page</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item col-md-3 col-sm-6 col-xs-12 app-ui" style="position: absolute; left: 570px; top: 891px;">
+                                        <div class="page-preview">
+                                            <div class="thumb">
+                                                <img src="https://cdn.dribbble.com/users/1789926/screenshots/4318372/cover_2.png" class="img-responsive" alt="">
+                                                <div class="overlay">
+                                                    <a href="#" >View Page</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item col-md-3 col-sm-6 col-xs-12 app-ui" style="position: absolute; left: 855px; top: 891px;">
+                                        <div class="page-preview">
+                                            <div class="thumb">
+                                                <img src="https://cdn.dribbble.com/users/1789926/screenshots/4318372/cover_2.png" class="img-responsive" alt="">
+                                                <div class="overlay">
+                                                    <a href="#" >View Page</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- tabs section end -->
+
+        <!-- our clients section start -->
+
+        <section class="our-client-sec mt-50">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-12 text-center">
+                  <h6 class="section-small-h6">Our Clients</h6>
+                  <h1 class="section-h45 mt-4 mt-lg-3 mt-xl-4">We're proud to have worked with</h1>
+               </div>
+            </div>
+            <div class="client-carousel">
+               <div class="owl-carousel team-owl-carousel">
+                  <div class="item">
+                     <div class="carosal-item text-center">
+                        <img src="assets/images/Rectangle 49109.png" class="carousel-img">
+                     </div>
+                  </div>
+                  <div class="item">
+                     <div class="carosal-item text-center">
+                        <img src="assets/images/Rectangle 49109.png" class="carousel-img">
+                     </div>
+                  </div>
+                  <div class="item">
+                     <div class="carosal-item text-center">
+                        <img src="assets/images/Rectangle 49109.png" class="carousel-img">
+                     </div>
+                  </div>
+                  <div class="item">
+                     <div class="carosal-item text-center">
+                        <img src="assets/images/Rectangle 49109.png" class="carousel-img">
+                     </div>
+                  </div>
+                  <div class="item">
+                     <div class="carosal-item text-center">
+                        <img src="assets/images/Rectangle 49109.png" class="carousel-img">
+                     </div>
+                  </div>
+                  <div class="item">
+                     <div class="carosal-item text-center">
+                        <img src="assets/images/Rectangle 49109.png" class="carousel-img">
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+
+        <!-- our client section end -->
 
 
     </section>
@@ -164,5 +390,7 @@
      <script src="assets/js/jquery.js"></script>
      <script src='assets/js/bootstrap.bundle.js'></script>
      <script src="assets/owlcarousel/owl.carousel.js"></script>
+     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.min.js'></script>
+     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js'></script>
      <script src="./assets/js/main.js"></script>
     </body>
