--- a/case-study.html
+++ b/case-study.html
@@ -94,7 +94,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="section-header">
-                            <h2>Project</h2>
+                            <h1 class="section-h45">Project</h1>
                         </div>
                     </div>
                 </div>
@@ -273,39 +273,39 @@
                </div>
             </div>
             <div class="client-carousel">
-               <div class="owl-carousel team-owl-carousel">
-                  <div class="item">
-                     <div class="carosal-item text-center">
-                        <img src="assets/images/Rectangle 49109.png" class="carousel-img">
-                     </div>
-                  </div>
-                  <div class="item">
-                     <div class="carosal-item text-center">
-                        <img src="assets/images/Rectangle 49109.png" class="carousel-img">
-                     </div>
-                  </div>
-                  <div class="item">
-                     <div class="carosal-item text-center">
-                        <img src="assets/images/Rectangle 49109.png" class="carousel-img">
-                     </div>
-                  </div>
-                  <div class="item">
-                     <div class="carosal-item text-center">
-                        <img src="assets/images/Rectangle 49109.png" class="carousel-img">
-                     </div>
-                  </div>
-                  <div class="item">
-                     <div class="carosal-item text-center">
-                        <img src="assets/images/Rectangle 49109.png" class="carousel-img">
-                     </div>
-                  </div>
-                  <div class="item">
-                     <div class="carosal-item text-center">
-                        <img src="assets/images/Rectangle 49109.png" class="carousel-img">
-                     </div>
-                  </div>
-               </div>
-            </div>
+                <div class="owl-carousel team-owl-carousel">
+                   <div class="item">
+                      <div class="carosal-item text-center">
+                         <img src="assets/images/Dreamtech-300x232.png" class="carousel-img">
+                      </div>
+                   </div>
+                   <div class="item">
+                      <div class="carosal-item text-center">
+                         <img src="assets/images/Firle-300x232.webp" class="carousel-img">
+                      </div>
+                   </div>
+                   <div class="item">
+                      <div class="carosal-item text-center">
+                         <img src="assets/images/Kuishi-300x232.webp" class="carousel-img">
+                      </div>
+                   </div>
+                   <div class="item">
+                      <div class="carosal-item text-center">
+                         <img src="assets/images/Loom-300x232.webp" class="carousel-img">
+                      </div>
+                   </div>
+                   <div class="item">
+                      <div class="carosal-item text-center">
+                         <img src="assets/images/Ravi-Ollie-300x232.webp" class="carousel-img">
+                      </div>
+                   </div>
+                   <div class="item">
+                      <div class="carosal-item text-center">
+                         <img src="assets/images/signtureworks-300x232.png" class="carousel-img">
+                      </div>
+                   </div>
+                </div>
+             </div>
          </div>
       </section>
 
