--- a/packages.html
+++ b/packages.html
@@ -315,32 +315,32 @@
                   <div class="owl-carousel team-owl-carousel">
                      <div class="item">
                         <div class="carosal-item text-center">
-                           <img src="assets/images/Rectangle 49109.png" class="carousel-img">
+                           <img src="assets/images/Dreamtech-300x232.png" class="carousel-img">
                         </div>
                      </div>
                      <div class="item">
                         <div class="carosal-item text-center">
-                           <img src="assets/images/Rectangle 49109.png" class="carousel-img">
+                           <img src="assets/images/Firle-300x232.webp" class="carousel-img">
                         </div>
                      </div>
                      <div class="item">
                         <div class="carosal-item text-center">
-                           <img src="assets/images/Rectangle 49109.png" class="carousel-img">
+                           <img src="assets/images/Kuishi-300x232.webp" class="carousel-img">
                         </div>
                      </div>
                      <div class="item">
                         <div class="carosal-item text-center">
-                           <img src="assets/images/Rectangle 49109.png" class="carousel-img">
+                           <img src="assets/images/Loom-300x232.webp" class="carousel-img">
                         </div>
                      </div>
                      <div class="item">
                         <div class="carosal-item text-center">
-                           <img src="assets/images/Rectangle 49109.png" class="carousel-img">
+                           <img src="assets/images/Ravi-Ollie-300x232.webp" class="carousel-img">
                         </div>
                      </div>
                      <div class="item">
                         <div class="carosal-item text-center">
-                           <img src="assets/images/Rectangle 49109.png" class="carousel-img">
+                           <img src="assets/images/signtureworks-300x232.png" class="carousel-img">
                         </div>
                      </div>
                   </div>
