--- a/case-study.html
+++ b/case-study.html
@@ -25,7 +25,7 @@
         <section class="main-header">
             <nav class="navbar navbar-expand-lg">
                <div class="container cus-container">
-                  <a class="navbar-brand" href="#"><img src="assets/images/market-logo.png" class="img-fluid"></a>
+                  <a class="navbar-brand" href="index.html"><img src="assets/images/market-logo.png" class="img-fluid"></a>
                   <button class="navbar-toggler" id="navbar-toggler" type="button" data-bs-toggle="collapse"
                      data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                      aria-label="Toggle navigation">
@@ -34,41 +34,41 @@
                      <i class="fa fa-times d-none"></i>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                           <a class="nav-link active" aria-current="page" href="meet-the-team.html">Who&nbsp;Are&nbsp;We</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                              data-bs-toggle="dropdown" aria-expanded="false">
-                           What&nbsp;we&nbsp;Do
-                           </a>
-                           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                              <li><a class="dropdown-item" href="#">Action</a></li>
-                              <li><a class="dropdown-item" href="#">Another action</a></li>
-                              <li><a class="dropdown-item" href="#">Something else here</a></li>
-                           </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                              data-bs-toggle="dropdown" aria-expanded="false">
-                           Case&nbsp;Studies
-                           </a>
-                           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                              <li><a class="dropdown-item" href="#">Action</a></li>
-                              <li><a class="dropdown-item" href="#">Another action</a></li>
-                              <li><a class="dropdown-item" href="#">Something else here</a></li>
-                           </ul>
-                        </li>
-                        <li class="nav-item">
-                           <a class="nav-link" href="#">Packages</a>
-                        </li>
-                        <li class="nav-item">
-                           <a class="nav-link" href="#">Blog</a>
-                        </li>
-                     </ul>
-                     <a class="nav-link btn nav-btn" href="#">Get A Qoute</a>
-                  </div>
+                    <ul class="navbar-nav">
+                       <li class="nav-item">
+                          <a class="nav-link" aria-current="page" href="meet-the-team.html">Who&nbsp;Are&nbsp;We</a>
+                       </li>
+                       <li class="nav-item dropdown">
+                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                             data-bs-toggle="dropdown" aria-expanded="false">
+                          What&nbsp;we&nbsp;Do
+                          </a>
+                          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                             <li><a class="dropdown-item" href="#">Action</a></li>
+                             <li><a class="dropdown-item" href="#">Another action</a></li>
+                             <li><a class="dropdown-item" href="#">Something else here</a></li>
+                          </ul>
+                       </li>
+                       <li class="nav-item dropdown">
+                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                             data-bs-toggle="dropdown" aria-expanded="false">
+                          Case&nbsp;Studies
+                          </a>
+                          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                             <li><a class="dropdown-item" href="#">Action</a></li>
+                             <li><a class="dropdown-item" href="#">Another action</a></li>
+                             <li><a class="dropdown-item" href="#">Something else here</a></li>
+                          </ul>
+                       </li>
+                       <li class="nav-item">
+                          <a class="nav-link" href="packages.html">Packages</a>
+                       </li>
+                       <li class="nav-item">
+                          <a class="nav-link" href="blogs.html">Blog</a>
+                       </li>
+                    </ul>
+                    <a class="nav-link btn nav-btn" href="#">Get A Qoute</a>
+                 </div>
                </div>
             </nav>
             <div class="top-header case-study-top-header p-0">
