--- a/what-we-do.html
+++ b/what-we-do.html
@@ -24,7 +24,7 @@
          <section>
             <nav class="navbar navbar-expand-lg">
                <div class="container cus-container">
-                  <a class="navbar-brand" href="#"><img src="assets/images/market-logo.png" class="img-fluid"></a>
+                  <a class="navbar-brand" href="index.html"><img src="assets/images/market-logo.png" class="img-fluid"></a>
                   <button class="navbar-toggler" id="navbar-toggler" type="button" data-bs-toggle="collapse"
                      data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                      aria-label="Toggle navigation">
@@ -35,8 +35,7 @@
                   <div class="collapse navbar-collapse" id="navbarNavDropdown">
                      <ul class="navbar-nav">
                         <li class="nav-item">
-                           <a class="nav-link active" aria-current="page"
-                              href="meet-the-team.html">Who&nbsp;Are&nbsp;We</a>
+                           <a class="nav-link" aria-current="page" href="meet-the-team.html">Who&nbsp;Are&nbsp;We</a>
                         </li>
                         <li class="nav-item dropdown">
                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -61,10 +60,10 @@
                            </ul>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link" href="#">Packages</a>
+                           <a class="nav-link" href="packages.html">Packages</a>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link" href="#">Blog</a>
+                           <a class="nav-link" href="blogs.html">Blog</a>
                         </li>
                      </ul>
                      <a class="nav-link btn nav-btn" href="#">Get A Qoute</a>
