--- a/index.html
+++ b/index.html
@@ -35,16 +35,18 @@
                         <a class="nav-link" aria-current="page" href="meet-the-team.html">Who&nbsp;Are&nbsp;We</a>
                      </li>
                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                           data-bs-toggle="dropdown" aria-expanded="false">
-                        What&nbsp;we&nbsp;Do
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                           <li><a class="dropdown-item" href="#">Action</a></li>
-                           <li><a class="dropdown-item" href="#">Another action</a></li>
-                           <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <a href="what-we-do.html" class="dropdown-toggle nav-link" data-toggle="dropdown"> What&nbsp;we&nbsp;Do <b class="caret"></b></a>
+                        <ul class="dropdown-menu multi-level">
+                            <li><a href="#" class="dropdown-item">Level 1</a></li>                                                     
+                            <li class="dropdown-submenu">
+                                <a href="#" class="dropdown-toggle dropdown-item" data-toggle="dropdown">Level 1</a>
+                                <!-- Level 2 -->
+                                <ul class="dropdown-menu">
+                                    <li><a href="#" class="dropdown-item">Level 2</a></li>
+                                </ul>
+                            </li>
                         </ul>
-                     </li>
+                    </li>
                      <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
