--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
             <button class="navbar-toggler" id="navbar-toggler" type="button" data-bs-toggle="collapse"
                data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                aria-label="Toggle navigation">
-               <!-- <span class="navbar-toggler-icon"></span> -->
                <i class="fa fa-bars"></i>
                <i class="fa fa-times d-none"></i>
             </button>
@@ -108,7 +107,7 @@
                      </ul>
                   </li>
                   <li class="nav-item dropdown">
-                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                     <a class="nav-link dropdown-toggle" href="case-study.html" id="navbarDropdownMenuLink" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Case&nbsp;Studies
                      </a>
