--- a/social-media-marketing.html
+++ b/social-media-marketing.html
@@ -20,54 +20,110 @@
    <body>
     <div class="social-media-market">
         <section>
-            <nav class="navbar navbar-expand-lg">
-               <div class="container cus-container">
-                  <a class="navbar-brand" href="index.html"><img src="assets/images/market-logo.png" class="img-fluid"></a>
-                  <button class="navbar-toggler" id="navbar-toggler" type="button" data-bs-toggle="collapse"
-                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                     aria-label="Toggle navigation">
-                     <!-- <span class="navbar-toggler-icon"></span> -->
-                     <i class="fa fa-bars"></i>
-                     <i class="fa fa-times d-none"></i>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                           <a class="nav-link active" aria-current="page" href="meet-the-team.html">Who&nbsp;Are&nbsp;We</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                              data-bs-toggle="dropdown" aria-expanded="false">
-                           What&nbsp;we&nbsp;Do
-                           </a>
-                           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                              <li><a class="dropdown-item" href="#">Action</a></li>
-                              <li><a class="dropdown-item" href="#">Another action</a></li>
-                              <li><a class="dropdown-item" href="#">Something else here</a></li>
-                           </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                              data-bs-toggle="dropdown" aria-expanded="false">
+         <nav class="navbar navbar-expand-lg">
+            <div class="container cus-container">
+               <a class="navbar-brand" href="index.html"><img src="assets/images/market-logo.png" class="img-fluid"></a>
+               <button class="navbar-toggler" id="navbar-toggler" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                  aria-label="Toggle navigation">
+                  <i class="fa fa-bars"></i>
+                  <i class="fa fa-times d-none"></i>
+               </button>
+               <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                  <ul class="navbar-nav">
+                     <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="meet-the-team.html">Who&nbsp;Are&nbsp;We</a>
+                     </li>
+                     <li class="nav-item dropdown">
+                        <a href="what-we-do.html" class="dropdown-toggle nav-link" data-toggle="dropdown">
+                           What&nbsp;we&nbsp;Do <b class="caret"></b></a>
+                        <ul class="dropdown-menu multi-level">
+                           <li class="dropdown-submenu">
+                              <a href="#" class="dropdown-toggle dropdown-item" data-toggle="dropdown">Social Media Advertising</a>
+                              <!-- Level 2 -->
+                              <ul class="dropdown-menu">
+                                 <li><a href="#" class="dropdown-item">Facebook Advertising</a></li>
+                                 <li><a href="#" class="dropdown-item">Instagram Advertising</a></li>
+                                 <li><a href="#" class="dropdown-item">Twitter Advertising</a></li>
+                                 <li><a href="#" class="dropdown-item">Linkdin Advertising</a></li>
+                                 <li><a href="#" class="dropdown-item">Tiktok Advertising</a></li>
+                                 <li><a href="#" class="dropdown-item">Pinterest Advertising</a></li>
+                                 
+                              </ul>
+                           </li>
+                           <li class="dropdown-submenu">
+                              <a href="#" class="dropdown-toggle dropdown-item" data-toggle="dropdown">Pay Per Clink Ads</a>
+                              <!-- Level 2 -->
+                              <ul class="dropdown-menu">
+                                 <li><a href="#" class="dropdown-item">Goole Search Ads</a></li>
+                                 <li><a href="#" class="dropdown-item">Google Shopping Ads</a></li>
+                                 <li><a href="#" class="dropdown-item">Youtube Ads</a></li>
+                                 <li><a href="#" class="dropdown-item">Microsoft Bing Ads</a></li>
+                              </ul>
+                           </li>
+                           <li class="dropdown-submenu">
+                              <a href="#" class="dropdown-toggle dropdown-item" data-toggle="dropdown">Search Engin Optimization</a>
+                              <!-- Level 2 -->
+                              <ul class="dropdown-menu">
+                                 <li><a href="#" class="dropdown-item">Organic SEO</a></li>
+                                 <li><a href="#" class="dropdown-item">eCommerece SEO</a></li>
+                                 <li><a href="#" class="dropdown-item">Shopify SEO Agency</a></li>
+                                 <li><a href="#" class="dropdown-item">Wordpress SEO Agency</a></li>
+                                 <li><a href="#" class="dropdown-item">Digital PR</a></li>
+                              </ul>
+                           </li>
+                           <li class="dropdown-submenu">
+                              <a href="#" class="dropdown-toggle dropdown-item" data-toggle="dropdown">Website Development</a>
+                              <!-- Level 2 -->
+                              <ul class="dropdown-menu">
+                                 <li><a href="#" class="dropdown-item">Shopify Development</a></li>
+                                 <li><a href="#" class="dropdown-item">Wordpress Development</a></li>
+                                 <li><a href="#" class="dropdown-item">Conversion Rate Optimization</a></li>
+                              </ul>
+                           </li>
+                           <li class="dropdown-menuParent"><a href="#" class="dropdown-item">Social Media Management</a></li>
+                           <li class="dropdown-submenu">
+                              <a href="#" class="dropdown-toggle dropdown-item" data-toggle="dropdown">Content Marketing</a>
+                              <!-- Level 2 -->
+                              <ul class="dropdown-menu">
+                                 <li><a href="#" class="dropdown-item">Video Content</a></li>
+                                 <li><a href="#" class="dropdown-item">Copywriting</a></li>
+                                 <li><a href="#" class="dropdown-item">Branding & laptop Design</a></li>
+                                 <li><a href="#" class="dropdown-item">Prodcast Marketing</a></li>
+                                 <li><a href="#" class="dropdown-item">Youtube Marketing</a></li>
+                              </ul>
+                           </li>
+                           <li class="dropdown-submenu">
+                              <a href="#" class="dropdown-toggle dropdown-item" data-toggle="dropdown">Email Marketing</a>
+                              <!-- Level 2 -->
+                              <ul class="dropdown-menu">
+                                 <li><a href="#" class="dropdown-item">Klaviyo Email Marketing</a></li>
+                              </ul>
+                           </li>
+                           <li class="dropdown-menuParent"><a href="#" class="dropdown-item">Digital Stragety</a></li>
+                        </ul>
+                     </li>
+                     <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="case-study.html" id="navbarDropdownMenuLink" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
                            Case&nbsp;Studies
-                           </a>
-                           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                              <li><a class="dropdown-item" href="#">Action</a></li>
-                              <li><a class="dropdown-item" href="#">Another action</a></li>
-                              <li><a class="dropdown-item" href="#">Something else here</a></li>
-                           </ul>
-                        </li>
-                        <li class="nav-item">
-                           <a class="nav-link" href="packages.html">Packages</a>
-                        </li>
-                        <li class="nav-item">
-                           <a class="nav-link" href="blogs.html">Blog</a>
-                        </li>
-                     </ul>
-                     <a class="nav-link btn nav-btn" href="#">Get A Qoute</a>
-                  </div>
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                           <li><a class="dropdown-item" href="#">Digital Marketing</a></li>
+                           <li><a class="dropdown-item" href="#">Website Design</a></li>
+                        </ul>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="packages.html">Packages</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="blogs.html">Blog</a>
+                     </li>
+                  </ul>
+                  <a class="nav-link btn nav-btn" href="#">Get A Qoute</a>
                </div>
-            </nav>
+            </div>
+         </nav>s
             <div class="top-header meet-team-top-header p-0">
                <div class="pages-banner-head-content">
                   <div class="bg-black-overlay"></div>
