--- a/what-we-do.html
+++ b/what-we-do.html
@@ -28,7 +28,6 @@
                   <button class="navbar-toggler" id="navbar-toggler" type="button" data-bs-toggle="collapse"
                      data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                      aria-label="Toggle navigation">
-                     <!-- <span class="navbar-toggler-icon"></span> -->
                      <i class="fa fa-bars"></i>
                      <i class="fa fa-times d-none"></i>
                   </button>
@@ -38,25 +37,82 @@
                            <a class="nav-link" aria-current="page" href="meet-the-team.html">Who&nbsp;Are&nbsp;We</a>
                         </li>
                         <li class="nav-item dropdown">
-                           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                              data-bs-toggle="dropdown" aria-expanded="false">
-                           What&nbsp;we&nbsp;Do
-                           </a>
-                           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                              <li><a class="dropdown-item" href="#">Action</a></li>
-                              <li><a class="dropdown-item" href="#">Another action</a></li>
-                              <li><a class="dropdown-item" href="#">Something else here</a></li>
+                           <a href="what-we-do.html" class="dropdown-toggle nav-link active" data-toggle="dropdown">
+                              What&nbsp;we&nbsp;Do <b class="caret"></b></a>
+                           <ul class="dropdown-menu multi-level">
+                              <li class="dropdown-submenu">
+                                 <a href="#" class="dropdown-toggle dropdown-item" data-toggle="dropdown">Social Media Advertising</a>
+                                 <!-- Level 2 -->
+                                 <ul class="dropdown-menu">
+                                    <li><a href="#" class="dropdown-item">Facebook Advertising</a></li>
+                                    <li><a href="#" class="dropdown-item">Instagram Advertising</a></li>
+                                    <li><a href="#" class="dropdown-item">Twitter Advertising</a></li>
+                                    <li><a href="#" class="dropdown-item">Linkdin Advertising</a></li>
+                                    <li><a href="#" class="dropdown-item">Tiktok Advertising</a></li>
+                                    <li><a href="#" class="dropdown-item">Pinterest Advertising</a></li>
+                                    
+                                 </ul>
+                              </li>
+                              <li class="dropdown-submenu">
+                                 <a href="#" class="dropdown-toggle dropdown-item" data-toggle="dropdown">Pay Per Clink Ads</a>
+                                 <!-- Level 2 -->
+                                 <ul class="dropdown-menu">
+                                    <li><a href="#" class="dropdown-item">Goole Search Ads</a></li>
+                                    <li><a href="#" class="dropdown-item">Google Shopping Ads</a></li>
+                                    <li><a href="#" class="dropdown-item">Youtube Ads</a></li>
+                                    <li><a href="#" class="dropdown-item">Microsoft Bing Ads</a></li>
+                                 </ul>
+                              </li>
+                              <li class="dropdown-submenu">
+                                 <a href="#" class="dropdown-toggle dropdown-item" data-toggle="dropdown">Search Engin Optimization</a>
+                                 <!-- Level 2 -->
+                                 <ul class="dropdown-menu">
+                                    <li><a href="#" class="dropdown-item">Organic SEO</a></li>
+                                    <li><a href="#" class="dropdown-item">eCommerece SEO</a></li>
+                                    <li><a href="#" class="dropdown-item">Shopify SEO Agency</a></li>
+                                    <li><a href="#" class="dropdown-item">Wordpress SEO Agency</a></li>
+                                    <li><a href="#" class="dropdown-item">Digital PR</a></li>
+                                 </ul>
+                              </li>
+                              <li class="dropdown-submenu">
+                                 <a href="#" class="dropdown-toggle dropdown-item" data-toggle="dropdown">Website Development</a>
+                                 <!-- Level 2 -->
+                                 <ul class="dropdown-menu">
+                                    <li><a href="#" class="dropdown-item">Shopify Development</a></li>
+                                    <li><a href="#" class="dropdown-item">Wordpress Development</a></li>
+                                    <li><a href="#" class="dropdown-item">Conversion Rate Optimization</a></li>
+                                 </ul>
+                              </li>
+                              <li class="dropdown-menuParent"><a href="#" class="dropdown-item">Social Media Management</a></li>
+                              <li class="dropdown-submenu">
+                                 <a href="#" class="dropdown-toggle dropdown-item" data-toggle="dropdown">Content Marketing</a>
+                                 <!-- Level 2 -->
+                                 <ul class="dropdown-menu">
+                                    <li><a href="#" class="dropdown-item">Video Content</a></li>
+                                    <li><a href="#" class="dropdown-item">Copywriting</a></li>
+                                    <li><a href="#" class="dropdown-item">Branding & laptop Design</a></li>
+                                    <li><a href="#" class="dropdown-item">Prodcast Marketing</a></li>
+                                    <li><a href="#" class="dropdown-item">Youtube Marketing</a></li>
+                                 </ul>
+                              </li>
+                              <li class="dropdown-submenu">
+                                 <a href="#" class="dropdown-toggle dropdown-item" data-toggle="dropdown">Email Marketing</a>
+                                 <!-- Level 2 -->
+                                 <ul class="dropdown-menu">
+                                    <li><a href="#" class="dropdown-item">Klaviyo Email Marketing</a></li>
+                                 </ul>
+                              </li>
+                              <li class="dropdown-menuParent"><a href="#" class="dropdown-item">Digital Stragety</a></li>
                            </ul>
                         </li>
                         <li class="nav-item dropdown">
-                           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                           <a class="nav-link dropdown-toggle" href="case-study.html" id="navbarDropdownMenuLink" role="button"
                               data-bs-toggle="dropdown" aria-expanded="false">
-                           Case&nbsp;Studies
+                              Case&nbsp;Studies
                            </a>
                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                              <li><a class="dropdown-item" href="#">Action</a></li>
-                              <li><a class="dropdown-item" href="#">Another action</a></li>
-                              <li><a class="dropdown-item" href="#">Something else here</a></li>
+                              <li><a class="dropdown-item" href="#">Digital Marketing</a></li>
+                              <li><a class="dropdown-item" href="#">Website Design</a></li>
                            </ul>
                         </li>
                         <li class="nav-item">
