change slider images

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                   <div class="carousel-item">
                      <div class="row main-row">
                         <div class="col-md-6">
-                           <img src="assets/images/Group 182.png" class="img-fluid">
+                           <img src="assets/images/sliderb.png" class="img-fluid">
                         </div>
                         <div class="col-md-6 right-sec">
                            <div class="right-text-sec">
@@ -218,7 +218,7 @@
                   <div class="carousel-item">
                      <div class="row main-row">
                         <div class="col-md-6">
-                           <img src="assets/images/Group 182.png" class="img-fluid">
+                           <img src="assets/images/sliderc.png" class="img-fluid">
                         </div>
                         <div class="col-md-6 right-sec">
                            <div class="right-text-sec">
